--- a/src/index.html
+++ b/src/index.html
@@ -49,13 +49,13 @@
             </span>
           <h5>Description<span class="period-mark">.</span></h5>
           <p>
-            보건복지부 주관, 차세대 프로젝트에 참여. 각 부처 프로젝트를 연계, 관리 하는
-            IMC를 개발, 사회보장정보원이라는 공직사이트에 해당 솔루션을 적용하는 작업을 진행하였습니다.
+            보건복지부 주관, 차세대 프로젝트에 참여. 각 부처 프로젝트를 통합 연계, 관리 하는
+            IMC(ESB)를 개발, 사회 보장 정보원이라는 공직사이트에 해당 솔루션을 적용하는 작업을 진행하였습니다.
           </p>
           <h5>What did I do<span class="period-mark">.</span></h5>
           <ul>
-            <li>TOMATO SYSTEM사의 ExBuilder를 이용한 메뉴의 화면 및 기능구현</li>
-            <li>연계 처리에 필요한 프로젝트 및 어댑터 관리 메뉴구현</li>
+            <li>TOMATO SYSTEM사의 ExBuilder를 이용한 메뉴화면 작업 및 기능구현</li>
+            <li>통합 연계 운영 메뉴중 프로젝트 및 어댑터 관리 구현</li>
           </ul>
           <h5>Tech Stack<span class="period-mark">.</span></h5>
           <p>Spring Boot, Java, Javascript, REST API</p>
@@ -70,7 +70,7 @@
           <h5>Description<span class="period-mark">.</span></h5>
           <p>
             남양사의 이유식 쇼핑몰인 <a href="https://careb.namyangi.com/" target="_blank">케어비몰</a>
-            의 고도화를 진행하였습니다.
+            의 고도화 작업을 진행하였습니다.
           </p>
           <h5>What did I do<span class="period-mark">.</span></h5>
           <ul>
