추가 메뉴구현에 따른 포트폴리오 업데이트

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,8 @@
           <h5>What did I do<span class="period-mark">.</span></h5>
           <ul>
             <li>UX/UI 플랫폼인 TOMATO SYSTEM사의 ExBuilder를 이용한 메뉴화면 작업과 RESTful API를 이용한 서비스 기능구현</li>
-            <li>통합 연계 운영 메뉴<br/>(프로젝트 관리, 어댑터 관리, DB 백업 및 복원)</li>
+            <li>통합 연계 운영 메뉴<br/>각 기관부처별 시행하는 프로젝트와 프로젝트간의 연결인 어댑터 관리 메뉴 화면구현<br/>(프로젝트 관리, 어댑터 관리, DB 백업 및 복원)</li>
+            <li>자료 검증 메뉴<br/>각 기관부처별 인터페이스 송수신에 따른 데이터 검증 화면구현<br/>(연계자료검증 관리)</li>
           </ul>
           <h5>Tech Stack<span class="period-mark">.</span></h5>
           <p>Spring Boot, Java, Javascript, RESTful API</p>
